--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.6.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "ckeditor4-react": "^4.1.0",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
+    "prisma": "^4.6.1",
     "sass": "^1.50.0"
   }
 }
