--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^4.6.1",
     "axios": "^0.27.2",
+    "axios-hooks": "^4.0.0",
     "bootstrap": "^5.2.1",
     "ckeditor4-react": "^4.1.0",
     "intercept-stdout": "^0.1.2",
